# goodnewsonly_backend

./: .gitattributes  .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  tox.ini
goodnewsonly/: api_models.py  core.py  headline_extractor.py  sentiment_analysis.py  serve.py
notebooks/: QA_output.ipynb  create_hf_repo.ipynb  create_hf_repo_v0.ipynb  get_html_data.ipynb  quantize_model.ipynb  quantize_model_static.ipynb
tests/: test_headline_extractor.py  test_sentiment_analysis.py  test_serve.py
