[tool.poetry]
name = "goodnewsonly"
version = "0.1.0"
description = "Backend for the Good News Only browser extension"
authors = ["Andrew Bauer <ajamesbauer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.103.1"
uvicorn = "^0.15.0"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
# Add other dependencies as needed
pydantic = "^2.3.0"
nltk = "^3.8.1"
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn package_name.serve:app --host=0.0.0.0 --port=${PORT}"
