[tool.poetry]
name = "goodnewsonly"
version = "0.1.0"
description = "Backend for the Good News Only browser extension"
authors = ["Andrew Bauer <ajamesbauer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.103.1"
uvicorn = "^0.15.0"
#numpy = "^1.21.2"
#scikit-learn = "^0.24.2"
# Add other dependencies as needed
pydantic = "^2.3.0"
nltk = "^3.8.1"
#httpx = "^0.25.0"
requests = "^2.31.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^4.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
deptry = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn package_name.serve:app --host=0.0.0.0 --port=${PORT}"

[tool.black]
line-length = 120
target-version = ['py39']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic"]

[tool.mypy]
files = ["goodnewsonly", "tests"]
ignore_missing_imports = true
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.deptry]
ignore_obsolete = [
    "uvicorn",
]
ignore_missing = [
]
ignore_transitive = [
]
