[tool.poetry]
name = "goodnewsonly"
version = "1.0.0"
description = "Backend for the Good News Only browser extension"
authors = ["Andrew Bauer <ajamesbauer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
fastapi = "^0.103.1"
uvicorn = "^0.15.0"
#numpy = "^1.21.2"
#scikit-learn = "^0.24.2"
pydantic = "^2.3.0"
#httpx = "^0.25.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0%2Bcpu-cp39-cp39-linux_x86_64.whl"}
#torch = "^2.1.0"
#protobuf = "3.20.0"
transformers = "^4.34.0"
httpx = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyter = "^1.0.0"
jupyterlab = "^4.0.3"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
deptry = "^0.12.0"
huggingface-hub = "^0.20.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn package_name.serve:app --host=0.0.0.0 --port=${PORT}"

[tool.black]
line-length = 120
target-version = ['py39']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic"]

[tool.mypy]
files = ["goodnewsonly", "tests"]
ignore_missing_imports = true
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.deptry]
ignore_obsolete = [
    "uvicorn",
]
ignore_missing = [
]
ignore_transitive = [
]